--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             </p>
           </div>
         </div>
-        <div>
+        <div class="feature-architect">
           <img src="images/architect.png" alt="" />
           <button id="experience-badge" class="btn-primary">
             <span id="experience-year">10+ Years</span>
